# daycareowl_shuup

./: setup.cfg
addons/locale/de/LC_MESSAGES/: django.mo
addons/locale/it/LC_MESSAGES/: django.mo
addons/locale/ja_JP/LC_MESSAGES/: django.mo
addons/locale/pt_BR/LC_MESSAGES/: django.mo
addons/locale/pt_PT/LC_MESSAGES/: django.mo
addons/locale/ru/LC_MESSAGES/: django.mo
addons/locale/zh_Hans/LC_MESSAGES/: django.mo
admin/locale/de/LC_MESSAGES/: django.mo  djangojs.mo
admin/locale/es/LC_MESSAGES/: django.mo  djangojs.mo
admin/locale/fi_FI/LC_MESSAGES/: django.mo  djangojs.mo
admin/locale/fr_CA/LC_MESSAGES/: django.mo  djangojs.mo
admin/locale/it/LC_MESSAGES/: django.mo  djangojs.mo
admin/locale/ja_JP/LC_MESSAGES/: django.mo  djangojs.mo
admin/locale/pt_BR/LC_MESSAGES/: django.mo  djangojs.mo
admin/locale/pt_PT/LC_MESSAGES/: django.mo  djangojs.mo
admin/locale/ru/LC_MESSAGES/: django.mo  djangojs.mo
admin/locale/sv_SE/LC_MESSAGES/: django.mo  djangojs.mo
admin/locale/zh_Hans/LC_MESSAGES/: django.mo  djangojs.mo
admin/static/shuup_admin/css/: base.css
admin/static/shuup_admin/js/: base.js  media-browser.js  order-creator.js  vendor.js
admin/utils/: picotable.py
campaigns/locale/de/LC_MESSAGES/: django.mo
campaigns/locale/es/LC_MESSAGES/: django.mo
campaigns/locale/fi_FI/LC_MESSAGES/: django.mo
campaigns/locale/fr_CA/LC_MESSAGES/: django.mo
campaigns/locale/it/LC_MESSAGES/: django.mo
campaigns/locale/ja_JP/LC_MESSAGES/: django.mo
campaigns/locale/pt_BR/LC_MESSAGES/: django.mo
xtheme/static/xtheme/: vendor.js
(+253 files in other folders)
