[metadata]
name = shuup
version = 0.0.1
author = Julian Baumgartner
author_email = germanp34e@aol.com
description = Core Shuup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hyptocrypto/daycareowl_shuup
project_urls =
    Bug Tracker = https://github.com/hyptocrypto/daycareowl_shuup/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find: 
python_requires = >=3.8

[options.packages.find]
where = 
